# tle-archive

./: .gitignore  create_daily_files.py  pyproject.toml
src/tle_archive/: __main__.py  archive.py  config.py  reader.py
tests/: test_archive.py  test_reader.py
